qmlformat: fix for statement with multiple iterators

Fixes: QTBUG-136192
Change-Id: I3a5a53c5c127f63d79656b8c13c677ee2779f28b
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 86017b85caa75935602dd9334b5c3d77c218a466)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 8ea32b9d58b76abc6042bc89db6ce68e0ad24acf)